升级gradle插件和改为用本地kalle库
1.升级gradle插件和改为用本地kalle库
2.sample改为没有用okalle库

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,8 +32,9 @@ android {
 }
 
 dependencies {
-    implementation rootProject.ext.dependencies.kalle
-    implementation rootProject.ext.dependencies.okalle
+    //implementation rootProject.ext.dependencies.kalle
+    implementation project(':kalle')
+    //implementation rootProject.ext.dependencies.okalle
 
     implementation rootProject.ext.dependencies.material
     implementation rootProject.ext.dependencies.appCompat
