--- a/kalle/build.gradle
+++ b/kalle/build.gradle
@@ -1,4 +1,15 @@
 apply plugin: rootProject.ext.plugins.library
+apply plugin: 'com.novoda.bintray-release'
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.9.1'
+    }
+}
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -8,4 +19,19 @@ android {
         minSdkVersion rootProject.ext.android.librayMinSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
     }
+}
+
+
+//com.novoda.bintray-release插件的闭包
+publish {
+    repoName= "MyMP"    //仓库名(repoName 如果没有填写，上传的库默认仓库是maven)
+    userOrg = 'loongg-max'    //在jcenter注册时填写的用户名，不是填写的姓名
+    //组id，类似于com.android.support:appcompat-v7:28.0.0中的com.android.support，可以自己根据项目随便自定义
+    groupId = 'com.loongg-max'
+    //项目id，类似于com.android.support:appcompat-v7:28.0.0中  的appcompat-v7，也是在仓库中的packageName（不一定要是在github中的项目名）
+    //即该字段为你的模块名称，唯一标识符
+    artifactId = 'kalle'
+    publishVersion = '1.0.0'  //版本号 , compile引用时的第3部分版本号
+    desc = 'Synchronous and asynchronous network request framework for Android.'
+    website = 'https://github.com/Loongg-max/Kalle'  //项目的托管地址（github、码云 等）
 }
